初始化beego项目基本内容； 初步可进行服务初始化与打包功能；
接下来进行基础内容渲染
